# fdds-rag

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  chat.py  docker-compose.yml  pyproject.toml  start.sh
data/: eval_config.yaml  eval_dataset.json  pdfs.txt  test_pdf.json
data/pdfs/: pdfs_not_included.txt
docker/fdds/: Dockerfile  docker-compose.yml
evaluation_config/: config_ret.yaml
scripts/fdds_scrapper/: scrapy.cfg
scripts/fdds_scrapper/fdds_scrapper/: items.py  middlewares.py  pipelines.py  settings.py
scripts/fdds_scrapper/fdds_scrapper/spiders/: pdf_spider.py
src/: app.py  chat.py  config.py  evaluation.py  evaluation_pipeline.py  handlers.py  inference.py  manage_pdfs.py  pdf_loader.py
src/fdds/: __init__.py  app.py  config.py  evaluation.py  evaluation_pipeline.py  handlers.py  inference.py  manage_pdfs.py  pdf_loader.py  reranker.py
src/ui-build/: index.html
src/ui-build/assets/: ExamplePluginComponent-Dz9h6Fww.js  FeedbackFormPluginComponent-BgEJz68-.js  index-DGhkfm1_.js  index-DUquNP-c.css  index-Dj98c7-R.js
ui/: package.json
