[project]
name = "fdds-rag"
version = "0.1.0"
description = "A Python package for generating AI-powered responses using retrieval-augmented generation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ragbits-core[qdrant]==0.10.0",
    "ragbits-document-search[gcs,azure]==0.10.0",
    "ragbits-cli==0.10.0",
    "unstructured[md,pdf]>=0.16.14",
    "pre-commit>=4.1.0",
    "pydantic-settings>=2.8.1",
]
