[project]
name = "fdds-rag"
version = "0.1.0"
description = "A Python package for generating AI-powered responses using retrieval-augmented generation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pre-commit>=4.1.0",
    "pydantic-settings>=2.8.1",
    "ragbits[qdrant]>=0.10.2",
    "ragbits-evaluate[relari]>=0.10.2",
    "unstructured[pdf]>=0.17.2",
    "fastapi[standard]>=0.115.11",
    "scrapy>=2.12.0",
]
